--- a/.markdownlint-config-info.md
+++ b/.markdownlint-config-info.md
@@ -8,6 +8,7 @@ Este archivo explica cada regla configurada en `.markdownlint.json`.
 |-------|--------|-------------|----------------|
 | **default** | `true` | Habilita todas las reglas por defecto | - |
 | **MD007** | `false` | Indentacion de listas desordenadas | ul-indent |
+| **MD012** | `false` | Multiples lineas en blanco consecutivas | no-multiple-blanks |
 | **MD013** | `false` | Longitud maxima de linea | line-length |
 | **MD022** | `false` | Lineas en blanco alrededor de encabezados | blanks-around-headings |
 | **MD024** | `false` | Multiples encabezados con el mismo contenido | no-duplicate-heading |
@@ -25,45 +26,59 @@ Este archivo explica cada regla configurada en `.markdownlint.json`.
 ## Explicacion Detallada
 
 ### MD007 - Indentacion de listas desordenadas
+
 **Desactivado** porque el proyecto usa formato VSCode Notebook que tiene indentacion de 3 espacios.
 
 ### MD013 - Longitud maxima de linea
+
 **Desactivado** para permitir lineas descriptivas largas en documentacion sin partir artificialmente el contenido.
 
 ### MD022 - Lineas en blanco alrededor de encabezados
+
 **Desactivado** para mayor flexibilidad en el formato de documentacion.
 
 ### MD024 - Multiples encabezados con el mismo contenido
+
 **Desactivado** porque es valido tener encabezados duplicados en diferentes secciones.
 
 ### MD025 - Multiples encabezados de nivel superior
+
 **Desactivado** para permitir multiples h1 en documentos largos.
 
 ### MD029 - Estilo de numeracion de listas ordenadas
+
 **Desactivado** para permitir diferentes estilos de numeracion segun el contexto.
 
 ### MD032 - Lineas en blanco alrededor de listas
+
 **Desactivado** para mayor flexibilidad en el formato de listas.
 
 ### MD033 - HTML en linea
+
 **Desactivado** porque el proyecto usa badges HTML y otros elementos HTML en markdown.
 
 ### MD034 - URLs desnudas
+
 **Desactivado** para permitir URLs directas sin necesidad de sintaxis markdown `[texto](url)`.
 
 ### MD036 - Enfasis como encabezado
+
 **Desactivado** para permitir texto enfatizado que podria parecer un encabezado.
 
 ### MD045 - Texto alternativo en imagenes
+
 **Desactivado** porque algunos badges de shields.io no requieren alt text descriptivo.
 
 ### MD050 - Estilo de enfasis fuerte
-**Desactivado** para permitir tanto `**texto**` como `__texto__` segun el contexto.
+
+__Desactivado__ para permitir tanto `**texto**` como `__texto__` segun el contexto.
 
 ### MD051 - Fragmentos de enlaces
+
 **Desactivado** porque algunos enlaces a secciones pueden no validarse correctamente.
 
 ### MD058 - Formato de tablas
+
 **Activado** para mantener un formato consistente de tablas con lineas en blanco alrededor.
 
 ## Referencias
