Document MD012 rule deactivation in markdownlint config
Added explanation for disabling the MD012 rule (multiple consecutive blank lines) to allow visual spacing in extensive documentation.

--- a/.markdownlint-config-info.md
+++ b/.markdownlint-config-info.md
@@ -29,6 +29,10 @@ Este archivo explica cada regla configurada en `.markdownlint.json`.
 
 **Desactivado** porque el proyecto usa formato VSCode Notebook que tiene indentacion de 3 espacios.
 
+### MD012 - Multiples lineas en blanco consecutivas
+
+**Desactivado** para permitir espaciado visual entre secciones grandes en documentacion extensa.
+
 ### MD013 - Longitud maxima de linea
 
 **Desactivado** para permitir lineas descriptivas largas en documentacion sin partir artificialmente el contenido.
